# RoomTempAdjust

./: README.md
roomtemperature/: CMakeLists.txt  main.cpp  temperature.h
roomtemperature/test/: CMakeLists.txt  ExampleTests.cpp
